Drag and drop causes null pointer exception #60815

Closed
opened 2019-01-24 12:52:39 +01:00 by matc · 7 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken:
2.80, a3261aad13, 2019-01-04
Worked:
2.79, f4dc9f9d68, 2018-03-22

Short description of error
There is a null pointer exception in the search callback for properties. It happens when the mouse cursor is not moved off the property after a drop event and the selection menu is opened instead.

Exact steps for others to reproduce the error
Open default startup .blend.
Duplicate the camera.
Select Scene tab in Properties window.
Select "Camera.001" as Camera.
Drag "Camera" from Outliner window to the Camera property in Scene tab.
Don't move the mouse. (Moving the mouse away from the button avoids the exception)
Click to open the selection menu.

Possible fix
Setting but->free_search_arg to false during drop will fix the null pointer exception but probably introduces memory that is never freed.
ui_but_drop.diff

**System Information** Operating system: Graphics card: **Blender Version** Broken: 2.80, a3261aad130e, 2019-01-04 Worked: 2.79, f4dc9f9d68b, 2018-03-22 **Short description of error** There is a null pointer exception in the search callback for properties. It happens when the mouse cursor is not moved off the property after a drop event and the selection menu is opened instead. **Exact steps for others to reproduce the error** Open default startup .blend. Duplicate the camera. Select Scene tab in Properties window. Select "Camera.001" as Camera. Drag "Camera" from Outliner window to the Camera property in Scene tab. Don't move the mouse. (Moving the mouse away from the button avoids the exception) Click to open the selection menu. **Possible fix** Setting but->free_search_arg to false during drop will fix the null pointer exception but probably introduces memory that is never freed. [ui_but_drop.diff](https://archive.blender.org/developer/F6388919/ui_but_drop.diff)
Author

Added subscriber: @matc

Added subscriber: @matc

#62760 was marked as duplicate of this issue

#62760 was marked as duplicate of this issue
Author

I updated D4250 to current master.

I updated [D4250](https://archive.blender.org/developer/D4250) to current master.
Author

This particular case appears to be fixed since f57fce3534 .

But the problem persists (as of 21f3c95f22)

New steps to reproduce

  • Open default .blend file
  • Switch to Scene properties tab
  • Drag "Cube" from Outliner into Camera slot
  • Don't move the mouse. (Moving the mouse away from the button avoids the exception)

Click to open the selection menu.

This particular case appears to be fixed since f57fce3534258e449 . But the problem persists (as of 21f3c95f22d458389) **New steps to reproduce** - Open default .blend file - Switch to Scene properties tab - Drag "Cube" from Outliner into Camera slot - Don't move the mouse. (Moving the mouse away from the button avoids the exception) # Click to open the selection menu.

This issue was referenced by da1350acdc

This issue was referenced by da1350acdcb4c335b0082864a8ba16d216544a1e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @Air_Bear, @ideasman42, @JacquesLucke, @mont29

Added subscribers: @Air_Bear, @ideasman42, @JacquesLucke, @mont29
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60815
No description provided.