Fix T60815: drag & drop crash when search menu is opened immediately after.

Patch by matc, some further refactoring by me.

Differential Revision: https://developer.blender.org/D4250