source/blender/editors/interface/interface_handlers.c
@@ -3138,9 +3138,6 @@ static void ui_textedit_end(bContext *C, uiBut *but, uiHandleButtonData *data)
 
 			ui_searchbox_free(C, data->searchbox);
 			data->searchbox = NULL;
-			if (but->free_search_arg) {
-				MEM_SAFE_FREE(but->search_arg);
-			}
 		}
 
 		but->editstr = NULL;
